--- a/views/404.pug
+++ b/views/404.pug
@@ -1,20 +1,5 @@
-doctype html
-html(lang="en")
-	head
-		meta(charset="UTF-8")
-		meta(http-equiv="X-UA-Compatible", content="IE=edge")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		title #{pageTitle}
-		link(rel="stylesheet", href="/css/main.css")
+extends layouts/main-layout.pug
 
-	body
-		header.main-header
-			nav.main-header__nav
-				ul.main-header__item-list
-					li.main-header__item
-						a.active(href="/") Shop
-					li.main-header__item
-						a(href="/admin/add-product") Add product
-
-		main
-			h1 Page Not Found!
+block content
+	main
+		h1 Page Not Found!
