--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title #{pageTitle}
 		link(rel="stylesheet", href="/css/main.css")
-		
+
 		block styles
 
 	body
@@ -14,7 +14,7 @@ html(lang="en")
 			nav.main-header__nav
 				ul.main-header__item-list
 					li.main-header__item
-						a(href="/") Shop
+						a(href="/", class=(path === '/' ? 'active' : '')) Shop
 					li.main-header__item
-						a(href="/admin/add-product") Add product
+						a(href="/admin/add-product", class=(path === '/admin/add-product' ? 'active' : '')) Add product
 		block content
