:art: :lipstick: adding the layout to handlebars

--- a/views/404.html
+++ b/views/404.html
@@ -13,7 +13,7 @@
 			<nav class="main-header__nav">
 				<ul class="main-header__item-list">
 					<li class="main-header__item">
-						<a class="active" href="/">Shop</a>
+						<a href="/">Shop</a>
 					</li>
 					<li class="main-header__item">
 						<a href="/admin/add-product">Add Product</a>
@@ -21,6 +21,8 @@
 				</ul>
 			</nav>
 		</header>
-		<h1>Page Not Found!</h1>
+		<main>
+			<h1>Page Not Found!</h1>
+		</main>
 	</body>
 </html>
