:sparkles: :zap: storing product data

--- a/views/admin/add-product.pug
+++ b/views/admin/add-product.pug
@@ -10,4 +10,13 @@ block content
 			.form-control
 				label(for="title") Title
 				input#title(type="text", name="title")
+			.form-control
+				label(for="imgUrl") Image URL
+				input#imgUrl(type="text", name="imgUrl")
+			.form-control
+				label(for="price") Price
+				input#price(type="number", name="price")
+			.form-control
+				label(for="description") Description
+				textarea#description(name="description", rows="5")
 			button.btn(type="submit") Add Product
