:art: :zap: displaying product data

--- a/views/admin/add-product.pug
+++ b/views/admin/add-product.pug
@@ -15,7 +15,7 @@ block content
 				input#imgUrl(type="text", name="imgUrl")
 			.form-control
 				label(for="price") Price
-				input#price(type="number", name="price")
+				input#price(type="number", name="price", step="0.01")
 			.form-control
 				label(for="description") Description
 				textarea#description(name="description", rows="5")
