--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -18,6 +18,7 @@ block content
 							p.product__description #{product.description}
 						.card__actions
 							form(action="/add-to-cart", method="POST")
+								a.btn(href='/products/'+ product.id) Details
 								button.btn Add to Cart
 		else
 			h1 No products...
