--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -3,4 +3,12 @@ extends ../layouts/main-layout.pug
 block styles
 
 block content
-	main
+	main.centered
+		h1 #{product.title}
+		hr
+		div
+			img(src=product.imgUrl, alt=product.title)
+		h2 #{product.price}
+		p #{product.description}
+		form(action="/cart", method="POST")
+			button.btn(type="submit") Add to cart
