--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -10,5 +10,4 @@ block content
 			img(src=product.imgUrl, alt=product.title)
 		h2 #{product.price}
 		p #{product.description}
-		form(action="/cart", method="POST")
-			button.btn(type="submit") Add to cart
+		include ../includes/add-to-cart.pug
