--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -20,6 +20,7 @@ block content
 				.form-control
 					label(for="description") Description
 					textarea#description(name="description", rows="5") #{product.description}
+				input(type="hidden", name="productId", value=product.id)
 				button.btn(type="submit") Update Product
 		else
 			form.product-form(action="/admin/add-product", method="POST")
