--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -19,6 +19,7 @@ block content
 						.card__actions
 							a.btn(href="/admin/edit-product/" + product.id + "?edit=true") Edit
 							form(action="/admin/delete-product", method="POST") 
+								input(type="hidden", name="productId", value=product.id)
 								button.btn Delete
 		else
 			h1 No products...
