:sparkles: :zap: fetching a single product with the "where" condition

--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -8,6 +8,6 @@ block content
 		hr
 		div
 			img(src=product.imgUrl, alt=product.title)
-		h2 #{product.price}
+		h2 $#{product.price}
 		p #{product.description}
 		include ../includes/add-to-cart.pug
