:zap: getting a single product with the 'where' condition

--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -6,7 +6,7 @@ block content
 	main.centered
 		h1 #{product.title}
 		hr
-		div
+		.img
 			img(src=product.imgUrl, alt=product.title)
 		h2 $#{product.price}
 		p #{product.description}
