--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,14 @@ form {
 	text-align: center;
 }
 
+.img {
+	height: 20rem;
+}
+
+.img img {
+	height: 100%;
+}
+
 .main-header {
 	width: 100%;
 	height: 3.5rem;
