--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -1,16 +1,18 @@
 extends ../layouts/main-layout.pug
 
 block styles
+	link(rel="stylesheet", href="/css/cart.css")
 
 block content
 	main
 		if products.length > 0
-			ul
+			ul.cart__item-list
 				each p in products
-					li 
-						p #{p.productData.title} (#{p.quantity})
+					li.cart__item
+						h1 #{p.title} 
+						h2 Quantity: #{p.cartItem.quantity}
 						form(action='/cart-delete-item', method='POST')
-							input(type="hidden", name="productId", value=p.productData.id)
+							input(type="hidden", name="productId", value=p.id)
 							button.btn(type="submit") Delete
 		else
 			h1 No products in cart!
