--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -9,7 +9,10 @@ header.main-header
 				a(href="/cart", class=(path === '/cart' ? 'active' : '')) Cart
 			li.main-header__item
 				a(href="/orders", class=(path === '/orders' ? 'active' : '')) Orders
+			//- li.main-header__item
+			//- 	a(href="/admin/add-product", class=(path === '/admin/add-product' ? 'active' : '')) Add product
+			//- li.main-header__item
+			//- 	a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin products
+		ul.main-header__item-list
 			li.main-header__item
-				a(href="/admin/add-product", class=(path === '/admin/add-product' ? 'active' : '')) Add product
-			li.main-header__item
-				a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin products
+				a(href="/login") Login
