--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -15,4 +15,4 @@ header.main-header
 			//- 	a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin products
 		ul.main-header__item-list
 			li.main-header__item
-				a(href="/login") Login
+				a(href="/login", class=(path === '/login' ? 'active' : '')) Login
