:art: :lipstick: code adjustements

--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,4 +1,6 @@
+.backdrop
 header.main-header
+	button#side-menu-toggle Menu
 	nav.main-header__nav
 		ul.main-header__item-list
 			li.main-header__item
@@ -20,5 +22,29 @@ header.main-header
 					a(href="/login", class=(path === '/login' ? 'active' : '')) Login
 			else	
 				li.main-header__item
+					form(action="/logout", method="post")
+						button(type="submit") Logout
+
+nav.mobile__nav
+		ul.mobile-nav__item-list
+			li.mobile-nav__item
+				a(href="/", class=(path === '/' ? 'active' : '')) Shop
+			li.mobile-nav__item
+				a(href="/products", class=(path === '/products' ? 'active' : '')) Products
+			if isAuthenticated
+				li.mobile-nav__item
+					a(href="/cart", class=(path === '/cart' ? 'active' : '')) Cart
+				li.mobile-nav__item
+					a(href="/orders", class=(path === '/orders' ? 'active' : '')) Orders
+				li.mobile-nav__item
+					a(href="/admin/add-product", class=(path === '/admin/add-product' ? 'active' : '')) Add product
+				li.mobile-nav__item
+					a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin products
+		ul.mobile-nav__item-list
+			if !isAuthenticated
+				li.mobile-nav__item
+					a(href="/login", class=(path === '/login' ? 'active' : '')) Login
+			else	
+				li.mobile-nav__item
 					form(action="/logout", method="post")
 						button(type="submit") Logout
