:art: :zap: our updated project status

--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -20,12 +20,14 @@ header.main-header
 			if !isAuthenticated
 				li.main-header__item
 					a(href="/login", class=(path === '/login' ? 'active' : '')) Login
+				li.main-header__item
+					a(href="/signup", class=(path === '/signup' ? 'active' : '')) Signup
 			else	
 				li.main-header__item
 					form(action="/logout", method="post")
 						button(type="submit") Logout
 
-nav.mobile__nav
+nav.mobile-nav
 	ul.mobile-nav__item-list
 		li.mobile-nav__item
 			a(href="/", class=(path === '/' ? 'active' : '')) Shop
@@ -40,10 +42,11 @@ nav.mobile__nav
 				a(href="/admin/add-product", class=(path === '/admin/add-product' ? 'active' : '')) Add product
 			li.mobile-nav__item
 				a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin products
-	ul.mobile-nav__item-list
 		if !isAuthenticated
 			li.mobile-nav__item
 				a(href="/login", class=(path === '/login' ? 'active' : '')) Login
+			li.mobile-nav__item
+				a(href="/signup", class=(path === '/signup' ? 'active' : '')) Signup
 		else	
 			li.mobile-nav__item
 				form(action="/logout", method="post")
