--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,6 +1,12 @@
 .login-form {
-  width: 20rem;
-  max-width: 90%;
-  margin: auto;
-  display: block;
+	width: 20rem;
+	max-width: 90%;
+	margin: auto;
+	display: block;
+}
+.signup-form {
+	width: 20rem;
+	max-width: 90%;
+	margin: auto;
+	display: block;
 }
