--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -6,6 +6,8 @@ block styles
 
 block content
 	main
+		if errorMessage
+			div #{errorMessage}
 		form.login-form(action="/login", method="POST")
 			.form-control
 				label(for="email") Email
