--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -7,7 +7,7 @@ block styles
 block content
 	main
 		if errorMessage
-			div #{errorMessage}
+			.user-message.user-message--error #{errorMessage}
 		form.login-form(action="/login", method="POST")
 			.form-control
 				label(for="email") Email
