:sparkles: :art: :zap: resetting passwords

--- a/views/auth/reset.pug
+++ b/views/auth/reset.pug
@@ -8,14 +8,9 @@ block content
 	main
 		if errorMessage
 			.user-message.user-message--error #{errorMessage}
-		form.login-form(action="/login", method="POST")
+		form.reset-form(action="/login", method="POST")
 			.form-control
 				label(for="email") Email
 				input#email(type="email", name="email")
-			.form-control
-				label(for="password") Password
-				input#password(type="password", name="password")
 			input(type="hidden", name="_csrf", value=csrfToken)
-			button.btn(type="submit") Login
-		.centered
-			a(href="/reset") Reset password
+			button.btn(type="submit") Reset password
