--- a/views/auth/new-password.pug
+++ b/views/auth/new-password.pug
@@ -13,5 +13,6 @@ block content
 				label(for="password") Password
 				input#password(type="password", name="password")
 			input(type="hidden", name="userId", value=userId)
+			input(type="hidden", name="passwordToken", value=passwordToken)
 			input(type="hidden", name="_csrf", value=csrfToken)
 			button.btn(type="submit") Update password
