--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -8,7 +8,7 @@ block content
 	main
 		if errorMessage
 			.user-message.user-message--error #{errorMessage}
-		form.signup-form(action="/signup", method="POST")
+		form.signup-form(action="/signup", method="POST", novalidate)
 			.form-control
 				label(for="email") Email
 				input#email(type="email", name="email")
