:art: :zap: keeping user input

--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -11,12 +11,12 @@ block content
 		form.signup-form(action="/signup", method="POST", novalidate)
 			.form-control
 				label(for="email") Email
-				input#email(type="email", name="email")
+				input#email(type="email", name="email", value=oldInput.email)
 			.form-control
 				label(for="password") Password
-				input#password(type="password", name="password")
+				input#password(type="password", name="password", value=oldInput.password)
 			.form-control
 				label(for="confirmPassword") Confirm password
-				input#confirmPassword(type="password", name="confirmPassword")
+				input#confirmPassword(type="password", name="confirmPassword", value=oldInput.confirmPassword)
 			input(type="hidden", name="_csrf", value=csrfToken)
 			button.btn(type="submit") Signup
