:sparkles: :zap: validating product editing

--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -11,16 +11,16 @@ block content
 		form.product-form(action=editing ? '/admin/edit-product' : '/admin/add-product', method="POST")
 			.form-control
 				label(for="title") Title
-				input#title(type="text", name="title", value=editing || hasError ? product.title : null)
+				input#title(type="text", name="title", value=editing || hasError ? product.title : null, class=validationErrors.find(e => e.param === 'title') ? 'invalid' : '')
 			.form-control
 				label(for="imgUrl") Image URL
-				input#imgUrl(type="text", name="imgUrl", value=editing || hasError ? product.imgUrl : null)
+				input#imgUrl(type="text", name="imgUrl", value=editing || hasError ? product.imgUrl : null, class=validationErrors.find(e => e.param === 'imgUrl') ? 'invalid' : '')
 			.form-control
 				label(for="price") Price
-				input#price(type="number", name="price", step="0.01", value=editing || hasError ? product.price : null)
+				input#price(type="number", name="price", step="0.01", value=editing || hasError ? product.price : null, class=validationErrors.find(e => e.param === 'price') ? 'invalid' : '')
 			.form-control
 				label(for="description") Description
-				textarea#description(name="description", rows="5") #{editing || hasError ? product.description : null}
+				textarea#description(name="description", rows="5", class=validationErrors.find(e => e.param === 'description') ? 'invalid' : '') #{editing || hasError ? product.description : null}
 			if editing
 				input(type="hidden", name="productId", value=product._id)
 			input(type="hidden", name="_csrf", value=csrfToken)
