--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -12,9 +12,12 @@ block content
 			.form-control
 				label(for="title") Title
 				input#title(type="text", name="title", value=editing || hasError ? product.title : null, class=validationErrors.find(e => e.param === 'title') ? 'invalid' : '')
+			//- .form-control
+			//- 	label(for="imgUrl") Image URL
+			//- 	input#imgUrl(type="text", name="imgUrl", value=editing || hasError ? product.imgUrl : null, class=validationErrors.find(e => e.param === 'imgUrl') ? 'invalid' : '')
 			.form-control
-				label(for="imgUrl") Image URL
-				input#imgUrl(type="text", name="imgUrl", value=editing || hasError ? product.imgUrl : null, class=validationErrors.find(e => e.param === 'imgUrl') ? 'invalid' : '')
+				label(for="img") Image
+				input#img(type="file", name="img")
 			.form-control
 				label(for="price") Price
 				input#price(type="number", name="price", step="0.01", value=editing || hasError ? product.price : null, class=validationErrors.find(e => e.param === 'price') ? 'invalid' : '')
