--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -8,7 +8,7 @@ block content
 	main
 		if errorMessage
 			.user-message.user-message--error #{errorMessage}
-		form.product-form(action=editing ? '/admin/edit-product' : '/admin/add-product', method="POST")
+		form.product-form(action=editing ? '/admin/edit-product' : '/admin/add-product', method="POST", enctype="multipart/form-data")
 			.form-control
 				label(for="title") Title
 				input#title(type="text", name="title", value=editing || hasError ? product.title : null, class=validationErrors.find(e => e.param === 'title') ? 'invalid' : '')
