:zap: storing file data in the database

--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -6,8 +6,8 @@ block content
 	main.centered
 		h1 #{product.title}
 		hr
-		.img
-			img(src=product.imgUrl, alt=product.title)
+		.image
+			img(src=product.imageUrl, alt=product.title)
 		h2 $#{product.price}
 		p #{product.description}
 		include ../includes/add-to-cart.pug
