:sparkles: :zap: downloading files with authentication

--- a/views/shop/orders.pug
+++ b/views/shop/orders.pug
@@ -10,8 +10,9 @@ block content
 				each o in orders
 					li.orders__item
 						h1 Order - ##{o._id}
-						ul.orders_products
+						ul.orders__products
 							each p in o.products
-								li.orders__products-item #{p.product.title} (#{p.quantity})
+								li.orders__products-item #{p.product.title} (#{p.quantity}) - 
+									a(href="/orders/" + o._id) Invoice
 		else
 			h1 Nothing there!
