:zap: adding pagination links

--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -19,5 +19,8 @@ block content
 						.card__actions
 							a.btn(href='/products/'+ product._id) Details
 							include ../includes/add-to-cart.pug
+			section.pagination
+				a(href="/?page=1") 1
+				a(href="/?page=2") 2
 		else
 			h1 No products...
