--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -20,7 +20,14 @@ block content
 							a.btn(href='/products/'+ product._id) Details
 							include ../includes/add-to-cart.pug
 			section.pagination
-				a(href="/?page=1") 1
-				a(href="/?page=2") 2
+				if currentPage != 1 && previousPage != 1
+					a(href="/?page=1") 1
+				if hasPreviousPage
+					a(href="/?page=" + previousPage) #{previousPage}
+				a(href="/?page=" + currentPage, class="active") #{currentPage}
+				if hasNextPage
+					a(href="/?page=" + nextPage) #{nextPage}
+				if lastPage !== currentPage && nextPage !== lastPage
+					a(href="/?page=" + lastPage) #{lastPage}
 		else
 			h1 No products...
