--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -17,8 +17,9 @@ block content
 							button.btn(type="submit") Delete
 			hr
 			.centered
-				form(action="/create-order", method='POST')
-					input(type="hidden", name="_csrf", value=csrfToken)
-					button.btn(type='submit') Order now!
+				//- form(action="/create-order", method='POST')
+				//- 	input(type="hidden", name="_csrf", value=csrfToken)
+				//- 	button.btn(type='submit') Order now!
+				a.btn(href="/checkout") Order now!
 		else
 			h1 No products in cart!
